<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"
    android:overScrollMode="never">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <com.scwang.wave.MultiWaveHeader
                android:layout_width="match_parent"
                android:layout_height="240dp"
                android:backgroundTint="@color/colorPrimaryDark"
                app:mwhCloseColor="@color/colorPrimaryDark"
                app:mwhColorAlpha="0.9"
                app:mwhGradientAngle="270"
                app:mwhIsRunning="true"
                app:mwhStartColor="@color/colorPrimary"
                app:mwhVelocity=".4"
                app:mwhWaves="PairWave" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:text="@string/app_name"
                android:textColor="@color/white"
                android:textSize="@dimen/text_size_huge" />
        </RelativeLayout>

        <com.gturedi.views.StatefulLayout
            android:id="@+id/activity_signup_stateful_layout"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:stfAnimationEnabled="false">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="@dimen/spacing_normal">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/create_an_account"
                    android:textSize="@dimen/text_size_big" />

                <EditText
                    android:id="@+id/activity_signup_email_edit_text"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/spacing_normal"
                    android:background="@drawable/bg_edit_text_rounded_with_corners"
                    android:drawablePadding="@dimen/spacing_small"
                    android:hint="@string/email_address"
                    android:inputType="textEmailAddress"
                    android:maxLines="1"
                    android:padding="@dimen/spacing_normal" />

                <EditText
                    android:id="@+id/activity_signup_password_edit_text"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/spacing_normal"
                    android:background="@drawable/bg_edit_text_rounded_with_corners"
                    android:drawablePadding="@dimen/spacing_small"
                    android:hint="@string/password"
                    android:inputType="textPassword"
                    android:maxLines="1"
                    android:padding="@dimen/spacing_normal" />

                <EditText
                    android:id="@+id/activity_signup_password_confirmation_edit_text"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/spacing_normal"
                    android:background="@drawable/bg_edit_text_rounded_with_corners"
                    android:drawablePadding="@dimen/spacing_small"
                    android:hint="@string/retype_password"
                    android:inputType="textPassword"
                    android:maxLines="1"
                    android:padding="@dimen/spacing_normal" />

                <Button
                    android:id="@+id/activity_signup_submit_button"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/spacing_normal"
                    android:background="@drawable/bg_oval_accent"
                    android:foreground="?selectableItemBackground"
                    android:text="@string/sign_up"
                    android:textAllCaps="false"
                    android:textColor="@color/white" />

            </LinearLayout>

        </com.gturedi.views.StatefulLayout>
    </LinearLayout>
</ScrollView>