<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/home_header_height">

            <com.scwang.wave.MultiWaveHeader
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:backgroundTint="@color/colorPrimaryDark"
                app:mwhCloseColor="@color/colorPrimaryDark"
                app:mwhColorAlpha="0.9"
                app:mwhGradientAngle="270"
                app:mwhIsRunning="true"
                app:mwhStartColor="@color/colorPrimary"
                app:mwhVelocity=".4"
                app:mwhWaves="PairWave" />


            <TextView
                android:id="@+id/activity_main_choose_topics_header_text_view"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/spacing_normal"
                android:layout_marginTop="@dimen/spacing_large"
                android:layout_marginEnd="@dimen/spacing_normal"
                android:text="@string/choose_your_topics_header"
                android:textColor="@color/white"
                android:textSize="@dimen/text_size_huge" />

            <TextView
                android:id="@+id/activity_main_topics_text_view"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/activity_main_choose_topics_header_text_view"
                android:layout_alignStart="@id/activity_main_choose_topics_header_text_view"
                android:layout_alignEnd="@id/activity_main_choose_topics_header_text_view"
                android:text="@string/topics"
                android:textColor="@color/white"
                android:textSize="@dimen/text_size_huge"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/activity_home_signout_text_view"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_marginStart="@dimen/spacing_normal"
                android:layout_marginTop="@dimen/spacing_normal"
                android:layout_marginEnd="@dimen/spacing_normal"
                android:clickable="true"
                android:drawableStart="@drawable/ic_logout"
                android:drawablePadding="@dimen/spacing_tiny"
                android:foreground="?selectableItemBackground"
                android:gravity="center"
                android:padding="@dimen/spacing_small"
                android:text="Sign out"
                android:textColor="@color/white"
                android:textSize="@dimen/text_size_normal"
                android:textStyle="bold" />


            <com.cooltechworks.views.shimmer.ShimmerRecyclerView
                android:id="@+id/activity_main_topics_recycler_view"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/activity_main_topics_text_view"
                android:layout_alignParentBottom="true"
                android:layout_marginTop="@dimen/spacing_normal"
                android:layout_marginBottom="@dimen/spacing_huge"
                app:shimmer_demo_angle="20"
                app:shimmer_demo_child_count="3"
                app:shimmer_demo_layout="@layout/list_item_chapter_shimmer"
                app:shimmer_demo_layout_manager_type="linear_horizontal" />

        </RelativeLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/spacing_normal"
                android:layout_marginTop="@dimen/spacing_large"
                android:layout_marginEnd="@dimen/spacing_normal"
                android:text="@string/recent_matches"
                android:textSize="@dimen/text_size_large" />

            <ProgressBar
                android:id="@+id/activity_home_recent_matches_progress_bar"
                style="?android:progressBarStyleSmallTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="bottom"
                android:layout_marginBottom="4dp"
                android:visibility="gone" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/activity_home_lack_permission_view_group"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/spacing_normal"
            android:gravity="center"
            android:orientation="vertical"
            android:visibility="gone">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/sign_in_cheering_message"
                android:textStyle="bold" />

            <Button
                android:id="@+id/activity_home_sign_in_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/spacing_small"
                android:background="@drawable/bg_oval_accent"
                android:foreground="?attr/selectableItemBackground"
                android:text="@string/sign_in"
                android:textAllCaps="false"
                android:textColor="@color/white" />

        </LinearLayout>

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/activity_main_recent_matches_recycler_view"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/spacing_normal"
            android:clipChildren="false"
            android:clipToPadding="false"
            android:paddingStart="@dimen/spacing_normal"
            android:paddingEnd="@dimen/spacing_normal"
            android:paddingBottom="@dimen/spacing_normal" />
    </LinearLayout>
</androidx.core.widget.NestedScrollView>